--- a/.theme/styles.css
+++ b/.theme/styles.css
@@ -1,12 +1,14 @@
 /* styles.css
  * Better styling for of Nginx FancyIndex page
- * © 2015-17, Lilian Besson (Naereen) and contributors,
- * open-sourced under the MIT License, https://lbesson.mit-license.org/
- * hosted on GitHub, https://GitHub.com/Naereen/Nginx-Fancyindex-Theme
+ * © 2021, Jack Tseng (jacktseng831) and contributors,
+ * open-sourced under the MIT License
  */
 
+@import "alt-theme.css";
+@import "markdown.css";
+
 * {
-	font-family: 'Verdana', sans-serif;
+	font-family: Verdana,Geneva,sans-serif,Arial,'Liberation Sans';
 	margin: 0;
 	padding: 0;
 	-webkit-box-sizing: border-box;
@@ -146,7 +148,7 @@ a.clear, a.clear:link, a.clear:visited {
 }
 .breadcrumbs a:hover {
 	background: #f6f6f6;
-	text-shadow: 1px 1px 0 #666;
+	text-shadow: 0 1px 0 #666;
 	-webkit-transition: background .3s ease-in;
 	-moz-transition: background .3s ease-in;
 	transition: background .3s ease-in;
@@ -277,64 +279,6 @@ footer a {
 	color:#990012;
 }
 
-
-/* dark-theme in light color scheme */
-.alt-theme {
-	color: #f2f0ed;
-	background-color: #252627;
-}
-
-.alt-theme a {
-	color: #b8b1a5;
-	text-decoration: none;
-}
-.alt-theme a:hover {
-	color: #b8b1a5;
-	text-decoration: underline;
-}
-
-.alt-theme.breadcrumbs a {
-	color: #e4dfda;
-}
-.alt-theme.breadcrumbs a:hover {
-	background: #3e4042;
-	text-shadow: 1px 1px 0 #666;
-}
-
-.alt-theme input {
-	border: 1px solid #666;
-	-webkit-box-shadow: inset 0 1px 1px rgba(153,153,153,0.075);
-	-moz-box-shadow: inset 0 1px 1px rgba(153,153,153,0.075);
-	box-shadow: inset 0 1px 1px rgba(153,153,153,0.075);
-}
-.alt-theme input:focus {
-	border-color: rgba(204,204,204,0.6);
-	-webkit-box-shadow: inset 0 1px 1px rgba(204,204,204,0.075),0 0 8px rgba(153,153,153,0.6);
-	-moz-box-shadow: inset 0 1px 1px rgba(204,204,204,0.075),0 0 8px rgba(153,153,153,0.6);
-	box-shadow: inset 0 1px 1px rgba(204,204,204,0.075),0 0 8px rgba(153,153,153,0.6);
-}
-
-#search.alt-theme {
-	color: #fff;
-	background-color: transparent;
-}
-
-.alt-theme tr:hover td {
-	color: #f2f0ed;
-	background: #3e4042;
-}
-
-.alt-theme td {
-	border-bottom: 1px solid #4a4d4f;
-}
-.alt-theme td > a {
-	background:transparent
-}
-
-.alt-theme footer a {
-	color:#ff6d80;
-}
-
 /* Dark color scheme */
 @media (prefers-color-scheme: dark) {
 	body {
@@ -356,7 +300,7 @@ footer a {
 	}
 	.breadcrumbs a:hover {
 		background: #3e4042;
-		text-shadow: 1px 1px 0 #666;
+		text-shadow: 0 1px 0 #666;
 	}
 
 	input {
@@ -388,66 +332,5 @@ footer a {
 
 	footer a {
 		color:#ff6d80;
-	}
-
-	/* light-theme in dark color scheme */
-	.alt-theme {
-		color: #61666c;
-		background-color: #fff;
-	}
-	
-	.alt-theme a {
-		color: #5f5f5f;
-		text-decoration: none;
-	}
-	.alt-theme a:hover {
-		color: #000;
-		text-decoration: none;
-	}
-	
-	.alt-theme.breadcrumbs a {
-		color: #1a1a1a;
-	}
-	.alt-theme.breadcrumbs a:hover {
-		background: #f6f6f6;
-		text-shadow: 1px 1px 0 #666;
-	}
-	
-	.alt-theme input {
-		border: 1px solid #ccc;
-		-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
-		-moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
-		box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
-	}
-	.alt-theme input:focus {
-		border-color: rgba(0,0,0,0.8);
-		-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(0,0,0,0.6);
-		-moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(0,0,0,0.6);
-		box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(0,0,0,0.6);
-	}
-	
-	#search.alt-theme {
-		color: #61666c;
-		background-color: transparent;
-	}
-	
-	.alt-theme tr:hover td {
-		color: #000;
-		background: #f6f6f6;
-	}
-	
-	.alt-theme td {
-		border-bottom: 1px solid #edf1f5;
-	}
-	.alt-theme td > a {
-		background:transparent
-	}
-	
-	.alt-theme footer a {
-		color:#990012;
-	}
-	
-	.alt-theme.slider {
-		background-color: #ccc;
 	}
 }
