Fixed the incorrect head.md display caused by config.js

--- a/.theme/markdown.css
+++ b/.theme/markdown.css
@@ -16,7 +16,7 @@
 	padding: 0.125rem 0.3125rem 0.0625rem;
 }
 .markdown pre code {
-	font-family: SFMono-Regular,Menlo,Monaco,Consolas,'Liberation Mono','Courier New',monospace;
+	font-family: Monaco,Consolas,'Liberation Mono','Courier New',monospace;
 	background-color: transparent;
 	border: 0;
 	padding: 0;
